tests/semantic/pass/var-7.tiger
let
	var a : int := 0
	var a : int := 0
in
end
