tests/semantic/fail/subscript_integer-1.tiger
let
      var x : String := "Hello"
      var y := int [x] of 0
in
end
